--- a/doc/release_notes.asciidoc
+++ b/doc/release_notes.asciidoc
@@ -26,7 +26,7 @@ ifdef::backend-docbook[]
 
 endif::backend-docbook[]
 
-== Release 2.96 (in process) ==
+== Release 2.96 ==
 
 * ASTF
 ** Upgrade TCP logic 
