--- a/doc/trex_appendix_mellanox.asciidoc
+++ b/doc/trex_appendix_mellanox.asciidoc
@@ -33,15 +33,12 @@ Following distros were tested and did *not* work for us in the past (with older 
 == OFED Installation
 
 Information was taken from link:http://www.mellanox.com/page/products_dyn?product_family=26&mtag=linux_sw_drivers[Install OFED]
-
-* Download *OFED 4.6-1.0.1* tar for RHEL 7.6 distro. - up to v2.87
-* Download *MLNX_OFED_LINUX-5.2-1.0.4.0-rhel7.9-x86_64.tgz* tar for RHEL 7.9 distro. - v2.87 and up
+Look for OFED matrix for the right version you need (in the next sections)
 
 [IMPORTANT]
 =====================================
-The OFED and Distro version should match, we tested it in this combination but it could work in diffrent 
+The OFED and Distro version should match, we tested it in this combination but it could work in different 
 =====================================
-
 
 [IMPORTANT]
 =====================================
